# cudaqx

./: .cudaq_version  CMakeLists.txt
cmake/Modules/: CUDA-QX.cmake
libs/core/include/cuda-qx/core/: tensor.h  tensor_impl.h
libs/core/lib/: CMakeLists.txt
libs/core/lib/tensor_impls/: xtensor_impl.cpp
libs/core/unittests/: test_core.cpp
libs/qec/include/cudaq/qec/: code.h  decoder.h
libs/qec/include/cudaq/qec/codes/: repetition.h  steane.h  surface_code.h
libs/qec/lib/: code.cpp  decoder.cpp  experiments.cpp  stabilizer_utils.cpp
libs/qec/lib/codes/: repetition.cpp  steane.cpp  surface_code.cpp
libs/qec/lib/decoders/: single_error_lut.cpp
libs/qec/lib/decoders/plugins/example/: single_error_lut_example.cpp
libs/qec/unittests/decoders/: sample_decoder.cpp
libs/solvers/include/cudaq/solvers/: adapt.h  observe_gradient.h  optimizer.h
libs/solvers/include/cudaq/solvers/adapt/: adapt_simulator.h
libs/solvers/include/cudaq/solvers/observe_gradients/: central_difference.h  forward_difference.h  parameter_shift.h
libs/solvers/include/cudaq/solvers/operators/: operator_pool.h
libs/solvers/include/cudaq/solvers/operators/molecule/: fermion_compiler.h  molecule_package_driver.h
libs/solvers/include/cudaq/solvers/operators/molecule/fermion_compilers/: bravyi_kitaev.h  jordan_wigner.h
libs/solvers/include/cudaq/solvers/operators/operator_pools/: qaoa_operator_pool.h  spin_complement_gsd.h  uccsd_operator_pool.h
libs/solvers/include/cudaq/solvers/optimizers/: cobyla.h  lbfgs.h
libs/solvers/lib/adapt/: adapt.cpp
libs/solvers/lib/observe_gradients/: observe_gradient.cpp
libs/solvers/lib/operators/molecule/: molecule.cpp
libs/solvers/lib/operators/molecule/drivers/: pyscf_driver.cpp
libs/solvers/lib/operators/molecule/fermion_compilers/: fermion_compiler.cpp
libs/solvers/lib/operators/operator_pools/: operator_pool.cpp  spin_complement_gsd.cpp
libs/solvers/lib/optimizers/: optimizer.cpp
libs/solvers/lib/qaoa/: qaoa.cpp
libs/solvers/python/tests/: test_jordan_wigner.py
libs/solvers/unittests/: test_bravyi_kitaev.cpp
tools/: CMakeLists.txt
tools/qkec/qkec/: CMakeLists.txt  __init__.py  qkec_extension.cpp  visitor.py
tools/qkec/qkec/dialects/: cc.py  quake.py
